--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="author"
+      content="github.com/benajtil/BenOS | LinkedIn: linkedin.com/in/your-profile | Email: your@email.com"
+    />
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BenOS</title>
